// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UILink > renders correctly - basic 1`] = `
<div>
  <a
    class="ui-link ui-link--large"
    href="https://test.com"
  >
    Test
  </a>
  <!--&lt;Link&gt;-->
</div>
`;

exports[`svelte/UILink > renders correctly - with id 1`] = `
<div>
  <a
    class="ui-link"
    href="https://test.com"
    id="test"
  >
    Test
  </a>
  <!--&lt;Link&gt;-->
</div>
`;

exports[`svelte/UILink > renders correctly - with rel 1`] = `
<div>
  <a
    class="ui-link"
    href="https://test.com"
    rel="no referrer"
  >
    Test
  </a>
  <!--&lt;Link&gt;-->
</div>
`;

exports[`svelte/UILink > renders correctly - with target 1`] = `
<div>
  <a
    class="ui-link"
    href="https://test.com"
    target="_blank"
  >
    Test
  </a>
  <!--&lt;Link&gt;-->
</div>
`;
